--- a/roles/water-gkhs-network/handlers/main.yml
+++ b/roles/water-gkhs-network/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: renew dhcp
-  shell: |
+- name: Renew dhcp
+  ansible.builtin.shell: |-
     dhclient -v -r {{ ansible_default_ipv4.interface }}
     dhclient -v {{ ansible_default_ipv4.interface }}
