--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -1,16 +1,15 @@
-name: Ansible Lint  # feel free to pick your own name
+---
+name: Ansible Lint # feel free to pick your own name
 
-on: [push, pull_request]
-
+true: [push, pull_request]
 jobs:
   lint:
-
     runs-on: ubuntu-latest
     env:
       ANSIBLE_VAULT_PASSWORD: ${{ secrets.VaultPassword }}
     steps:
     # Important: This sets up your GITHUB_WORKSPACE environment variable
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Lint Ansible Playbook
-      uses: ansible-community/ansible-lint-action@main
+      - name: Lint Ansible Playbook
+        uses: ansible-community/ansible-lint-action@main
