--- a/requirements.yml
+++ b/requirements.yml
@@ -1,11 +1,15 @@
+---
 roles:
   - src: elastic.elasticsearch
     version: v7.16.3
   - src: geerlingguy.java
+    version: 2.2.0
   - src: elboletaire.transmission
-  #- src: pablocrivella.heroku-toolbelt
+    version: 2.0.2
   - src: https://github.com/aquarion/ansible-papertrail
     name: ansible.papertrail
 
 collections:
- - community.aws
+  - amazon.aws
+  - community.general
+  - community.mysql
