--- a/roles/aws-route53/tasks/aqxs.yml
+++ b/roles/aws-route53/tasks/aqxs.yml
@@ -1,105 +1,98 @@
+---
+- name: Aqxs.net. - A
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: aqxs.net
+    record: aqxs.net.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: A
+    ttl: "3600"
+    value: "{{ cenote_ip }}"
 
+- name: Aqxs.net. - NS
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: aqxs.net
+    record: aqxs.net.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: NS
+    ttl: "172800"
+    value: ns-1408.awsdns-48.org.,ns-685.awsdns-21.net.,ns-40.awsdns-05.com.,ns-1866.awsdns-41.co.uk.
 
-- name: aqxs.net. - A
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "aqxs.net"
-      record: "aqxs.net."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "A"
-      ttl: "3600"
-      value: '{{ cenote_ip }}'
-
-
-
-- name: aqxs.net. - NS
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "aqxs.net"
-      record: "aqxs.net."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "NS"
-      ttl: "172800"
-      value: ns-1408.awsdns-48.org.,ns-685.awsdns-21.net.,ns-40.awsdns-05.com.,ns-1866.awsdns-41.co.uk.
-
-
-
-#- name: aqxs.net. - SOA
-#  route53:
+# - name: Aqxs.net. - SOA
+#  amazon.aws.route53:
 #      overwrite: true
 #      command: "create"
 #      zone: "aqxs.net"
 #      record: "aqxs.net."
 #      aws_access_key: '{{ aqcom_aws_key }}'
-      # aws_secret_key: '{{ aqcom_aws_secret }}'
-      # type: "SOA"
+# aws_secret_key: '{{ aqcom_aws_secret }}'
+# type: "SOA"
 #      ttl: "900"
 #      value: 'ns-1408.awsdns-48.org. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
+- name: Aqxs.net. - TXT Records
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: aqxs.net
+    record: aqxs.net.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: TXT
+    ttl: "300"
+    value:
+      - '"google-site-verification=SvTocYjKGCKTzN9BlJSdq0MVkEaFvEAum18VoLaKB5s"'
+      - '"v=spf1 a mx include:spf.mtasv.net ~all"'
 
-- name: aqxs.net. - TXT Records
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "aqxs.net"
-      record: "aqxs.net."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "TXT"
-      ttl: "300"
-      value:
-        - '"google-site-verification=SvTocYjKGCKTzN9BlJSdq0MVkEaFvEAum18VoLaKB5s"'
-        - '"v=spf1 a mx include:spf.mtasv.net ~all"'
-
-- name: wildcard.aqxs.net. - A
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "aqxs.net"
-      record: "*.aqxs.net."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "A"
-      ttl: "3600"
-      value: '{{ cenote_ip }}'
+- name: Wildcard.aqxs.net. - A
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: aqxs.net
+    record: "*.aqxs.net."
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: A
+    ttl: "3600"
+    value: "{{ cenote_ip }}"
 
 - name: 20151026232244.pm._domainkey.aqxs.net. - TXT
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "aqxs.net"
-      record: "20151026232244.pm._domainkey.aqxs.net."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "TXT"
-      ttl: "300"
-      value: '"k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCGF2/JFx7pvFw7RU1wXzqtMohMaSZTEbeLscHSrvzrKKtH2M1zTY8YwIZpjFCjbCbQ2aW28bLzzhd2e1klZorwWV++CYoXnnGgVtz1241ToVPgKyKepmBn6E+3DaJZWsj17jINgEkxYoZ3hvp34y+NSFxlMR4bD9V3EetoxUAYgQIDAQAB"'
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: aqxs.net
+    record: 20151026232244.pm._domainkey.aqxs.net.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: TXT
+    ttl: "300"
+    value: '"k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCGF2/JFx7pvFw7RU1wXzqtMohMaSZTEbeLscHSrvzrKKtH2M1zTY8YwIZpjFCjbCbQ2aW28bLzzhd2e1klZorwWV++CYoXnnGgVtz1241ToVPgKyKepmBn6E+3DaJZWsj17jINgEkxYoZ3hvp34y+NSFxlMR4bD9V3EetoxUAYgQIDAQAB"'
 
-- name: aqxs.net. - MX
-  route53:
-      overwrite: true
-      command: "delete"
-      zone: "aqxs.net"
-      record: "lists.aqxs.net."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "MX"
-      ttl: "3600"
-      value: 10 aspmx2.googlemail.com.,10 aspmx3.googlemail.com.,5 alt1.aspmx.l.google.com.,5 alt2.aspmx.l.google.com.,1 aspmx.l.google.com.
+- name: Aqxs.net. - MX
+  amazon.aws.route53:
+    overwrite: true
+    command: delete
+    zone: aqxs.net
+    record: lists.aqxs.net.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: MX
+    ttl: "3600"
+    value: 10 aspmx2.googlemail.com.,10 aspmx3.googlemail.com.,5 alt1.aspmx.l.google.com.,5 alt2.aspmx.l.google.com.,1 aspmx.l.google.com.
 
-- name: pmbounce.aqxs.net. - CNAME
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "aqxs.net"
-      record: "pmbounce.aqxs.net."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "CNAME"
-      ttl: "300"
-      value: 'pm.mtasv.net'
-
+- name: Pmbounce.aqxs.net. - CNAME
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: aqxs.net
+    record: pmbounce.aqxs.net.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: CNAME
+    ttl: "300"
+    value: pm.mtasv.net
