--- a/roles/aws-route53/tasks/cleartext.yml
+++ b/roles/aws-route53/tasks/cleartext.yml
@@ -1,45 +1,42 @@
 ---
+- name: Cleartextcontent.co.uk. - A
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: cleartextcontent.co.uk
+    record: cleartextcontent.co.uk.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: A
+    ttl: "300"
+    value: "{{ loadbalancer_ip }}"
 
-- name: cleartextcontent.co.uk. - A
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "cleartextcontent.co.uk"
-      record: "cleartextcontent.co.uk."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "A"
-      ttl: "300"
-      value: '{{ loadbalancer_ip }}'
+- name: Cleartextcontent.co.uk. - MX
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: cleartextcontent.co.uk
+    record: cleartextcontent.co.uk.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: MX
+    ttl: "300"
+    value: 10 cenote.gkhs.net
 
-- name: cleartextcontent.co.uk. - MX
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "cleartextcontent.co.uk"
-      record: "cleartextcontent.co.uk."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "MX"
-      ttl: "300"
-      value: '10 cenote.gkhs.net'
+- name: Cleartextcontent.co.uk. - NS
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: cleartextcontent.co.uk
+    record: cleartextcontent.co.uk.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: NS
+    ttl: "172800"
+    value: ns-797.awsdns-35.net.,ns-39.awsdns-04.com.,ns-2024.awsdns-61.co.uk.,ns-1219.awsdns-24.org.
 
-- name: cleartextcontent.co.uk. - NS
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "cleartextcontent.co.uk"
-      record: "cleartextcontent.co.uk."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "NS"
-      ttl: "172800"
-      value: ns-797.awsdns-35.net.,ns-39.awsdns-04.com.,ns-2024.awsdns-61.co.uk.,ns-1219.awsdns-24.org.
-
-
-
-#- name: cleartextcontent.co.uk. - SOA
-#  route53:
+# - name: Cleartextcontent.co.uk. - SOA
+#  amazon.aws.route53:
 #      overwrite: true
 #      command: "create"
 #      zone: "cleartextcontent.co.uk"
@@ -50,17 +47,14 @@
 #      ttl: "900"
 #      value: 'ns-797.awsdns-35.net. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
-
-
-- name: www.cleartextcontent.co.uk. - A
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "cleartextcontent.co.uk"
-      record: "www.cleartextcontent.co.uk."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "A"
-      ttl: "300"
-      value: '{{ loadbalancer_ip }}'
-
+- name: Www.cleartextcontent.co.uk. - A
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: cleartextcontent.co.uk
+    record: www.cleartextcontent.co.uk.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: A
+    ttl: "300"
+    value: "{{ loadbalancer_ip }}"
