--- a/roles/aws-route53/tasks/monthlymoon.yml
+++ b/roles/aws-route53/tasks/monthlymoon.yml
@@ -1,36 +1,33 @@
 ---
+# - name: Themonthlymoon.com
+#  amazon.aws.route53_zone: zone=themonthlymoon.com comment="Storytime"
 
-#- name: themonthlymoon.com
-#  route53_zone: zone=themonthlymoon.com comment="Storytime"
+- name: Themonthlymoon.com. - A
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: themonthlymoon.com
+    record: themonthlymoon.com.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: A
+    ttl: "300"
+    value: "{{ loadbalancer_ip }}"
 
-- name: themonthlymoon.com. - A
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "themonthlymoon.com"
-      record: "themonthlymoon.com."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "A"
-      ttl: "300"
-      value: '{{ loadbalancer_ip }}'
+- name: Themonthlymoon.com. - NS
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: themonthlymoon.com
+    record: themonthlymoon.com.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: NS
+    ttl: "172800"
+    value: ns-727.awsdns-26.net.,ns-1489.awsdns-58.org.,ns-1.awsdns-00.com.,s-1630.awsdns-11.co.uk.
 
-
-
-- name: themonthlymoon.com. - NS
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "themonthlymoon.com"
-      record: "themonthlymoon.com."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "NS"
-      ttl: "172800"
-      value: ns-727.awsdns-26.net.,ns-1489.awsdns-58.org.,ns-1.awsdns-00.com.,s-1630.awsdns-11.co.uk.
-
-#- name: themonthlymoon.com. - SOA
-#  route53:
+# - name: Themonthlymoon.com. - SOA
+#  amazon.aws.route53:
 #      overwrite: true
 #      command: "create"
 #      zone: "themonthlymoon.com"
@@ -41,42 +38,38 @@
 #      ttl: "900"
 #      value: 'ns-1302.awsdns-34.org. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
+- name: Www.themonthlymoon.com. - CNAME
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: themonthlymoon.com
+    record: www.themonthlymoon.com.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: CNAME
+    ttl: "300"
+    value: themonthlymoon.com
 
+- name: Google._domainkey.themonthlymoon.com. - TXT
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: themonthlymoon.com
+    record: google._domainkey.themonthlymoon.com.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: TXT
+    ttl: "300"
+    value: '"v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCeXipYp/HVbmCmGSDI5WKA6vB2679OoStEVKXePsMD0WfEOK+BqQv1lHBzjL2AlNvGmMPf2Ccd6cnk0HdsaQqpkbS1TyOWuZx7P191Q1bHhT5mxvZoAdYbv5XN+0j/SWsqhg/2zYmCQhB8ed499sX5esIUWYQK4djh+xV7GaYxCwIDAQAB"'
 
-- name: www.themonthlymoon.com. - CNAME
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "themonthlymoon.com"
-      record: "www.themonthlymoon.com."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "CNAME"
-      ttl: "300"
-      value: 'themonthlymoon.com'
-
-
-- name: google._domainkey.themonthlymoon.com. - TXT
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "themonthlymoon.com"
-      record: "google._domainkey.themonthlymoon.com."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "TXT"
-      ttl: "300"
-      value: '"v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCeXipYp/HVbmCmGSDI5WKA6vB2679OoStEVKXePsMD0WfEOK+BqQv1lHBzjL2AlNvGmMPf2Ccd6cnk0HdsaQqpkbS1TyOWuZx7P191Q1bHhT5mxvZoAdYbv5XN+0j/SWsqhg/2zYmCQhB8ed499sX5esIUWYQK4djh+xV7GaYxCwIDAQAB"'
-
-- name: themonthlymoon.com. - MX
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "themonthlymoon.com"
-      record: "themonthlymoon.com."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "MX"
-      ttl: "300"
-      value: '5 ALT1.ASPMX.L.GOOGLE.COM.,5 ALT2.ASPMX.L.GOOGLE.COM.,1 ASPMX.L.GOOGLE.COM.,10 ASPMX2.GOOGLEMAIL.COM.,10 ASPMX3.GOOGLEMAIL.COM.'
-
+- name: Themonthlymoon.com. - MX
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: themonthlymoon.com
+    record: themonthlymoon.com.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: MX
+    ttl: "300"
+    value: 5 ALT1.ASPMX.L.GOOGLE.COM.,5 ALT2.ASPMX.L.GOOGLE.COM.,1 ASPMX.L.GOOGLE.COM.,10 ASPMX2.GOOGLEMAIL.COM.,10 ASPMX3.GOOGLEMAIL.COM.
