--- a/roles/aws-route53/tasks/warehouse.yml
+++ b/roles/aws-route53/tasks/warehouse.yml
@@ -1,39 +1,34 @@
 ---
-
-- name: warehousebasement.com. - A
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "warehousebasement.com"
-      record: "warehousebasement.com."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "A"
-      ttl: "300"
-      value: '{{ loadbalancer_ip }}'
+- name: Warehousebasement.com. - A
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: warehousebasement.com
+    record: warehousebasement.com.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: A
+    ttl: "300"
+    value: "{{ loadbalancer_ip }}"
   tags:
     - warehouse_basement
 
-
-
-- name: warehousebasement.com. - NS
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "warehousebasement.com"
-      record: "warehousebasement.com."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "NS"
-      ttl: "172800"
-      value: ns-983.awsdns-58.net.,ns-1661.awsdns-15.co.uk.,ns-1161.awsdns-17.org.,ns-271.awsdns-33.com.
+- name: Warehousebasement.com. - NS
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: warehousebasement.com
+    record: warehousebasement.com.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: NS
+    ttl: "172800"
+    value: ns-983.awsdns-58.net.,ns-1661.awsdns-15.co.uk.,ns-1161.awsdns-17.org.,ns-271.awsdns-33.com.
   tags:
     - warehouse_basement
 
-
-
-#- name: warehousebasement.com. - SOA
-#  route53:
+# - name: Warehousebasement.com. - SOA
+#  amazon.aws.route53:
 #      overwrite: true
 #      command: "create"
 #      zone: "warehousebasement.com"
@@ -44,20 +39,16 @@
 #      ttl: "900"
 #      value: 'ns-983.awsdns-58.net. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
-
-
-- name: www.warehousebasement.com. - CNAME
-  route53:
-      overwrite: true
-      command: "create"
-      zone: "warehousebasement.com"
-      record: "www.warehousebasement.com."
-      aws_access_key: '{{ aqcom_aws_key }}'
-      aws_secret_key: '{{ aqcom_aws_secret }}'
-      type: "CNAME"
-      ttl: "300"
-      value: 'warehousebasement.com'
+- name: Www.warehousebasement.com. - CNAME
+  amazon.aws.route53:
+    overwrite: true
+    command: create
+    zone: warehousebasement.com
+    record: www.warehousebasement.com.
+    aws_access_key: "{{ aqcom_aws_key }}"
+    aws_secret_key: "{{ aqcom_aws_secret }}"
+    type: CNAME
+    ttl: "300"
+    value: warehousebasement.com
   tags:
     - warehouse_basement
-
-
