--- a/roles/github-cli/tasks/main.yml
+++ b/roles/github-cli/tasks/main.yml
@@ -1,34 +1,32 @@
 ---
-
 - name: Upload github gpg key
   ansible.builtin.copy:
     src: githubcli-archive-keyring.gpg
     dest: /etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg
     owner: root
     group: root
-    mode: '0644'
+    mode: "0644"
   tags:
     - githubcli
 
 - name: Get DEB architecture
-  shell: dpkg --print-architecture
+  ansible.builtin.shell: dpkg --print-architecture
   register: deb_architecture
   tags:
     - githubcli
 
 - name: Add specified repository into sources list
   ansible.builtin.apt_repository:
-    repo: "deb [arch={{ deb_architecture.stdout }} signed-by=/etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main"
+    repo: deb [arch={{ deb_architecture.stdout }} signed-by=/etc/apt/trusted.gpg.d/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main
     state: present
   tags:
     - githubcli
 
-
-- name: install gh
-  apt:
+- name: Install gh
+  ansible.builtin.apt:
     name: "{{ item }}"
     state: present
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 21600
   loop:
     - gh
