--- a/roles/plexupdate-uninstall/tasks/main.yml
+++ b/roles/plexupdate-uninstall/tasks/main.yml
@@ -1,34 +1,49 @@
-
+---
 - name: Remove plexupdate
-  file:
+  ansible.builtin.file:
     path: /root/plexupdate
     state: absent
 
-- name: delete cron plexupdate preferences
-  file: state=absent path==/etc/plexupdate.cron.conf
+- name: Delete cron plexupdate preferences
+  ansible.builtin.file:
+    state: absent
+    path: /etc/plexupdate.cron.conf
 
-- name: delete public plexupdate preferences
-  file: state=absent path=/etc/plexupdate.conf
+- name: Delete public plexupdate preferences
+  ansible.builtin.file:
+    state: absent
+    path: /etc/plexupdate.conf
 
-- name: remove plex
-  file: state=absent path=/etc/init/plexmediaserver.conf
+- name: Remove plex
+  ansible.builtin.file:
+    state: absent
+    path: /etc/init/plexmediaserver.conf
 
-- name: remove plex
-  apt:
+- name: Remove plex
+  ansible.builtin.apt:
     package: plexmediaserver
     state: absent
-    autoclean: yes
-    autoremove: yes
-    purge: yes
+    autoclean: true
+    autoremove: true
+    purge: true
 
-- name: remove cron
-  file:
+- name: Remove cron
+  ansible.builtin.file:
     path: /etc/cron.daily/plexupdate
     state: absent
 
-## Remove old stuff
-- name: remove old cron for plex update
-  cron: name="plexupdate" cron_file=plexupdate user=root hour=4 minute=47 job="cd /tmp;/root/plexupdate/plexupdate.sh" state=absent
+# # Remove old stuff
+- name: Remove old cron for plex update
+  ansible.builtin.cron:
+    name: plexupdate
+    cron_file: plexupdate
+    user: root
+    hour: 4
+    minute: 47
+    job: cd /tmp;/root/plexupdate/plexupdate.sh
+    state: absent
 
 - name: Remove old plex update
-  file: path=/root/.plexupdate state=absent
+  ansible.builtin.file:
+    path: /root/.plexupdate
+    state: absent
