--- a/roles/water-gkhs-filebot/handlers/main.yml
+++ b/roles/water-gkhs-filebot/handlers/main.yml
@@ -1,46 +1,41 @@
 ---
-- name: sysctl
-  command: "sysctl -p"
+- name: Sysctl
+  ansible.builtin.command: sysctl -p
 
-
-- name: register filebot
-  become_user: "plex"
-  command: "filebot --license {{ plex_home }}/.filebot_license.psm"
-
+- name: Register filebot
+  become_user: plex
+  ansible.builtin.command: filebot --license {{ plex_home }}/.filebot_license.psm
 
 - name: Update APT
-  apt: update_cache=yes cache_valid_time=21600
-
-
-
+  ansible.builtin.apt: update_cache=yes cache_valid_time=21600
 
 - name: Get running processes
-  shell: "ps -ef | grep -v grep | grep -w filebot_inotify.fifo | grep inotifywait | awk '{print $2}'"
+  ansible.builtin.shell: ps -ef | grep -v grep | grep -w filebot_inotify.fifo | grep inotifywait | awk '{print $2}'
   register: running_processes
-  listen: "restart filebot inotify"
+  listen: restart filebot inotify
 
 - name: Kill running processes
-  shell: "kill {{ item }}"
+  ansible.builtin.shell: kill {{ item }}
   with_items: "{{ running_processes.stdout_lines }}"
-  listen: "restart filebot inotify"
+  listen: restart filebot inotify
 
 - name: Wait for things to end before going on
-  wait_for:
-    path: "/proc/{{ item }}/status"
+  ansible.builtin.wait_for:
+    path: /proc/{{ item }}/status
     state: absent
   with_items: "{{ running_processes.stdout_lines }}"
   ignore_errors: true
   register: killed_processes
-  listen: "restart filebot inotify"
+  listen: restart filebot inotify
 
 - name: Force kill stuck processes
-  listen: "restart filebot inotify"
-  shell: "kill -9 {{ item }}"
+  listen: restart filebot inotify
+  ansible.builtin.shell: kill -9 {{ item }}
   with_items: "{{ killed_processes.results | select('failed') | map(attribute='item') | list }}"
   ignore_errors: true
 
 - name: Restart inotify
-  listen: "restart filebot inotify"
-  command: "{{ plex_home }}/bin/inotify.sh"
+  listen: restart filebot inotify
+  ansible.builtin.command: "{{ plex_home }}/bin/inotify.sh"
   async: 1000
   poll: 0
