--- a/roles/water-gkhs-filebot/tasks/filebot.yml
+++ b/roles/water-gkhs-filebot/tasks/filebot.yml
@@ -1,46 +1,44 @@
-
+---
 # Based on https://github.com/cmprescott/ansible-role-filebot
-
-
-- name: "Check Filebot Version"
-  lineinfile:
+- name: Check Filebot Version
+  ansible.builtin.lineinfile:
     path: "{{ plex_home }}/.ansible_filebot_reg"
-    regexp: '^etag'
-    line: 'etag {{ filebot_version }}'
+    regexp: ^etag
+    line: etag {{ filebot_version }}
     owner: plex
-    group: plex
+    ansible.builtin.group: plex
     mode: 0644
-    create: yes
-  register: FilebotUpdate
+    create: true
+  register: did_filebot_update
   tags:
-    - "filebot"
+    - filebot
 
-- name: "Setup |  deb | download installer"
-  get_url: url="{{ filebot_deb_url }}" dest="{{ filebot_deb_tmp }}"
-  when: FilebotUpdate.changed
+- name: Setup |  deb | download installer
+  ansible.builtin.get_url: url="{{ filebot_deb_url }}" dest="{{ filebot_deb_tmp }}"
+  when: did_filebot_update.changed
   tags:
-    - "filebot"
+    - filebot
 
-- name: "Setup |  deb | run the installer"
-  become: Yes
-  apt: deb="{{ filebot_deb_tmp }}"
-  when: FilebotUpdate.changed
+- name: Setup |  deb | run the installer
+  become: true
+  ansible.builtin.apt: deb="{{ filebot_deb_tmp }}"
+  when: did_filebot_update.changed
   tags:
-    - "filebot"
+    - filebot
 
-- name: "Install mediainfo library"
-  apt:
-   pkg: libmediainfo0v5
-   state: present
+- name: Install mediainfo library
+  ansible.builtin.apt:
+    pkg: libmediainfo0v5
+    state: present
 
-- name: register licence
-  copy:
+- name: Register licence
+  ansible.builtin.copy:
     src: Filebot_Licence.psm
     dest: "{{ plex_home }}/.filebot_license.psm"
     owner: plex
-    group: plex
+    ansible.builtin.group: plex
     mode: 0644
   notify:
-    - "register filebot"
+    - register filebot
   tags:
-    - "filebot"
+    - filebot
