--- a/roles/water-gkhs-flexget/tasks/media-user-tasks.yml
+++ b/roles/water-gkhs-flexget/tasks/media-user-tasks.yml
@@ -1,7 +1,8 @@
+---
 # Tasks performed as media user
 
 - name: Install pip transmissionrpc package
-  pip:
+  ansible.builtin.pip:
     name: transmissionrpc
     virtualenv: "{{ plex_home }}/.virtualenvs/flexget"
     virtualenv_python: python3
@@ -9,7 +10,7 @@
     - flexget
 
 - name: Install Flexget
-  pip:
+  ansible.builtin.pip:
     name: flexget
     virtualenv: "{{ plex_home }}/.virtualenvs/flexget"
     virtualenv_python: python3
@@ -18,7 +19,7 @@
     - flexget
 
 - name: Make sure flexget config dir exists
-  file:
+  ansible.builtin.file:
     path: "{{ plex_home }}/.flexget"
     state: directory
     owner: plex
@@ -26,12 +27,12 @@
   tags:
     - flexget
 
-#- template: src=flexget.yml dest={{ plex_home }}/.flexget/config.yml mode=0660 owner=plex
+# - ansible.builtin.template: src=flexget.yml dest={{ plex_home }}/.flexget/config.yml mode=0660 owner=plex
 - name: Create flexget config
-  copy:
+  ansible.builtin.copy:
     dest: "{{ plex_home }}/.flexget/config.yml"
     mode: 0660
-    owner: "plex"
+    owner: plex
     content: "{{ flexget_tasks | to_nice_yaml }}"
   tags:
     - flexget
