--- a/roles/water-gkhs-nginx/handlers/main.yml
+++ b/roles/water-gkhs-nginx/handlers/main.yml
@@ -1,4 +1,3 @@
 ---
-
-- name: restart nginx
-  service: name=nginx state=restarted
+- name: Restart nginx
+  ansible.builtin.service: name=nginx state=restarted
