--- a/roles/water-gkhs-nginx/tasks/main.yml
+++ b/roles/water-gkhs-nginx/tasks/main.yml
@@ -1,24 +1,24 @@
-- name: install nginx
-  apt:
+---
+- name: Install nginx
+  ansible.builtin.apt:
     pkg: nginx
     state: present
 
 - name: Fix diffie-hellman insecurites
-  include: diffie-hellman.yml
+  ansible.builtin.include_tasks: diffie-hellman.yml
 
 - name: Add clacks overhead to nginx
-  copy:
+  ansible.builtin.copy:
     dest: /etc/nginx/conf.d/clacks.conf
     src: files/clacks.conf
     owner: root
     group: root
     mode: 0664
   notify:
-   - restart nginx
+    - restart nginx
 
-
-- name: configure letsencrypt config for misc
-  template:
+- name: Configure letsencrypt config for misc
+  ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/letsencrypt_ssl.conf
     mode: 0664
@@ -27,64 +27,63 @@
 
 # @todo These should be in Archipelago, really.
 
-- name: configure letsencrypt config for foip_me
-  template:
+- name: Configure letsencrypt config for foip_me
+  ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/foipme_ssl.conf
     mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
-    cert_id: "foip.me"
+    cert_id: foip.me
   notify:
-   - restart nginx
+    - restart nginx
 
-- name: configure letsencrypt config for istic
-  template:
+- name: Configure letsencrypt config for istic
+  ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/istic_ssl.conf
     mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
-    cert_id: "istic.net"
+    cert_id: istic.net
   notify:
-   - restart nginx
+    - restart nginx
 
-- name: configure letsencrypt config for carcosadreams
-  template:
+- name: Configure letsencrypt config for carcosadreams
+  ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/carcosadreams_ssl.conf
     mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
-    cert_id: "carcosadreams.com"
+    cert_id: carcosadreams.com
   tags:
     - carcosadreams
   notify:
-   - restart nginx
+    - restart nginx
 
-- name: configure letsencrypt config for hubris.house
-  template:
+- name: Configure letsencrypt config for hubris.house
+  ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/hubris_ssl.conf
     mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
-    cert_id: "hubris.house"
+    cert_id: hubris.house
   tags:
     - hubris.house
   notify:
-   - restart nginx
+    - restart nginx
 
-
-- name: configure letsencrypt config for bromioscreations.com
-  template:
+- name: Configure letsencrypt config for bromioscreations.com
+  ansible.builtin.template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/bromioscreations_ssl.conf
     mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
-    cert_id: "bromioscreations.com"
+    cert_id: bromioscreations.com
   tags:
     - bromioscreations
   notify:
-   - restart nginx
+    - restart nginx
