--- a/roles/water-gkhs-web-errors/handlers/main.yml
+++ b/roles/water-gkhs-web-errors/handlers/main.yml
@@ -1,8 +1,10 @@
 ---
+- name: Restart nginx
+  ansible.builtin.service:
+    name: nginx
+    state: restarted
 
-- name: restart nginx
-  service: name=nginx state=restarted
-
-
-- name: restart apache
-  service: name=apache2 state=restarted
+- name: Restart apache
+  ansible.builtin.service:
+    name: apache2
+    state: restarted
